--- a/MyCourseWork/MyCourseWork/MyCourseWork.csproj
+++ b/MyCourseWork/MyCourseWork/MyCourseWork.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FileType.Designer.cs">
+      <DependentUpon>FileType.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Tasks.Designer.cs">
       <DependentUpon>Tasks.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FileType.resx">
+      <DependentUpon>FileType.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
